--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         </div>
 
     </div>
-    <script src="//cdn.bootcss.com/jquery/2.2.0/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="//cdn.bootcss.com/vue/2.0.7/vue.js"></script>
-    <script src="//cdn.bootcss.com/vue-resource/1.0.3/vue-resource.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/vue/2.0.7/vue.js"></script>
+    <script src="https://cdn.bootcss.com/vue-resource/1.0.3/vue-resource.js"></script>
 
     <script>
         var vm = new Vue({
